--- a/templates/index.html
+++ b/templates/index.html
@@ -460,7 +460,7 @@
     </div>
     <!-- Testimonial starts -->
     <div class="tes_wrapper">
-      <div class="box" data-aos="fade-left">
+      <div class="box" data-aos="fade-up">
         <i class="fas fa-quote-left quote"></i>
         <p>Perfect rules and real world trainings for studends helps them to innovate or discover new things. So, we make students to deal with real world problems.</p>
         <div class="content">
@@ -480,7 +480,7 @@
           </div>
         </div>
       </div>
-      <div class="box" data-aos="fade-right">
+      <div class="box" data-aos="fade-up">
         <i class="fas fa-quote-left quote"></i>
         <p>Although this is modern era, there are many problems in our society. Students and we as a team try to solve those big problems in our community or society.</p>
         <div class="content">
